<resources>
    <string name="app_name">OSS</string>
    <string name="app_descripcion">System Service Online</string>

    <string name="Registro">Registro</string>
    <string name="Perfil">Perfil</string>
    <string name="EditarPerfil">Editar perfil</string>
    <string name="PerfilProfesional">Perfil profesional</string>
    <string name="ExperienciaLaboral">Experiencia Laboral</string>
    <string name="Estudios">Estudios</string>
    <string name="action_settings">Settings</string>

    <string name="home_item">Inicio</string>
    <string name="servicios_item">Servicios</string>
    <string name="usuarios_item">Buscar servicio</string>
    <string name="misservicios_item">Mis servicios</string>
    <string name="favoritos_item">Mis Favoritos</string>
    <string name="conversaciones_item">Conversaciones</string>
    <string name="cuenta_item">Mi perfil</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>

    <string name="titlulo_pickers">Obtener fecha</string>
    <string name="formato_fecha">dd/mm/yyyy</string>

    <!-- Categorias -->
    <string name="ArteDiseno">Arte y Diseño</string>
    <string name="Vehiculos">Vehiculos</string>
    <string name="Belleza">Belleza</string>
    <string name="Deportes">Deportes</string>
    <string name="Educacion">Educación</string>
    <string name="Entretenimiento">Entretenimiento</string>
    <string name="ServiciosTecnicos">Servicios Técnicos</string>
    <string name="Medicina">Medicina</string>

    <string name="banner_ad_unit_id1">ca-app-pub-3326525809184833/8495106654</string>
</resources>
